--- a/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
@@ -18,71 +18,80 @@
                         <div class="px-md-8  px-lg-4 px-xl-8 py-2 py-md-3  py-xl-4">
                   <span class="d-block text-center">
                     <i
-                            class="icon-tick-inside-circle font-size-9 text-success"
+                        class="icon-tick-inside-circle font-size-9 text-success"
                     ></i>
                   </span>
-                        {% if regular_donation %}
+
                             <h5
                                 class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
                             >
-                                {{'Regular donation was activated'|t}}
+                                {% if card is not null %}
+                                     {{ 'Credit car was successfully saved'|t }}
+                                {% else %}
+                                    {{ 'Transaction was successfull'|t }}
+                                {% endif %}
                             </h5>
-                            <div class="d-flex align-items-center m-0 py-2 flex-wrap">
-                                <div>
-                                    <span class="d-block font-size-2 line-height-1-2 text-grey">{{ 'Periodicity'|t }}</span>
-                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{ reg_data.frequency }} {{ 'Month'|t }}</span>
-                                </div>
-                                <div class="ml-4">
-                                    <span class="d-block font-size-2 line-height-1-2 text-grey">{{'Day'|t}}</span>
-                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{ reg_data.day }}</span>
-                                </div>
-                                <div class="ml-4">
-                                     <span class="d-block font-size-2 line-height-1-2 text-grey">{{'Payment execution date'|t}}</span>
-                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{reg_data.date}}</span>
-                                </div>
-                            </div>
-                            {% else %}
-                                <h5
-                                    class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
+
+                            {% if card is not null %}
+                                <div
+                                    class="w-100 d-flex flex-column align-items-center mb-4 mb-sm-5"
                                 >
-                                    {{'Transaction was successfull'|t}}
-                                </h5>
+                                    {% if card.Type() == 'MC' %}
+                                        <div class="cc-green col-md-3 m-2">
+                                            <span class="chip"></span>
+                                            <?xml version="1.0" encoding="UTF-8"?>
+                                            <img src="/{{ directory }}/images/mc_symbol.svg" height="55px" width="55px"
+                                                 id="logo-mastercard" alt="">
+                                            <span class="cc-number">**** **** **** {{ card.Digits() }}</span>
+                                            <span class="cc-name">{{ card.Expiry(TRUE) }}</span>
+                                        </div>
+
+                                    {% elseif card.Type() == 'VISA' %}
+                                        <div class="cc-dark col-md-3 m-2">
+                                            <span class="chip"></span>
+                                            <img src="/{{ directory }}/images/visa2.svg" id="logo-visa" alt="">
+                                            <span class="cc-number">**** **** **** {{ card.Digits() }}</span>
+                                            <span class="cc-name">{{ card.Expiry(TRUE) }}</span>
+                                        </div>
+                                    {% endif %}
+                                </div>
                             {% endif %}
 
+
                             {% if auth %}
-                            <div
+                                <div
                                     class="w-100 d-flex flex-column align-items-center mb-4 mb-sm-5"
-                            >
-                                <label class="form-label">{{ 'You have recieved'|t }}</label>
-                                <span
-                                        class="text-success font-size-5 d-inline-flex pt-sm-2 mt-0"
                                 >
+                                    <label class="form-label">{{ 'You have recieved'|t }}</label>
+                                    <span
+                                        class="text-success font-size-5 d-inline-flex pt-sm-2 mt-0"
+                                    >
                       <i class="icon-ged"></i>
                       <span class="ml-1">{{ amount }}</span>
                     </span>
-                            </div>
-                            {%  endif %}
-                            <a
-                                    href="{{ path('user.page') }}"
-                                    class="btn btn-success text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
-                            >
-                                {{'Profile'|t}}
-                            </a>
-                            {% if regular_donation  %}
-                            <a
-                                    href="{{ path('girchi_donations.regular_donations') }}"
-                                    class="btn btn-success text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
-                            >
-                                {{'My regular donations'|t}}
-                            </a>
+                                </div>
                             {% endif %}
-                            {% if regular_donation is null %}
                             <a
+                                href="{{ path('user.page') }}"
+                                class="btn btn-success text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
+                            >
+                                {{ 'Profile'|t }}
+                            </a>
+                            {% if card %}
+                                <a
+                                    href="{{ path('girchi_banking.credit_card_controller_cards') }}"
+                                    class="btn btn btn-warning text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
+                                >
+                                    {{ 'My cards'|t }}
+                                </a>
+                            {% endif %}
+                            {% if card is null %}
+                                <a
                                     href="{{ path('girchi_donations.donations_controller_index') }}"
                                     class="btn btn-warning text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
-                            >
-                                {{'Donate Again'|t}}
-                            </a>
+                                >
+                                    {{ 'Donate Again'|t }}
+                                </a>
                             {% endif %}
                         </div>
                     </div>
@@ -97,7 +106,7 @@
                                 მიღებულ რიცხვი თქვენ დაგერიცხებათ როგორც GeD-ს.
                             </p>
                             <h6
-                                    class="text-uppercase text-success font-weight-bold mt-4 mb-3"
+                                class="text-uppercase text-success font-weight-bold mt-4 mb-3"
                             >
                                 განსაზღვრე შემოწირულობის მიზანი
                             </h6>
@@ -108,7 +117,7 @@
                                 “ლეგალიზაციის კამპანიისთვის” და ა.შ.)
                             </p>
                             <h6
-                                    class="text-uppercase text-success font-weight-bold mt-4 mb-3"
+                                class="text-uppercase text-success font-weight-bold mt-4 mb-3"
                             >
                                 შექმენი ავტომატური გადარიცხვა
                             </h6>
@@ -128,4 +137,5 @@
 
 </div>
 
+{{ attach_library('girchi_banking/girchi_banking') }}
 
