--- a/web/modules/custom/girchi_banking/css/banking.css
+++ b/web/modules/custom/girchi_banking/css/banking.css
@@ -107,3 +107,141 @@
     display: block;
   }
 }
+
+
+.cc-selector input {
+    margin: 0;
+    padding: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.cc-selector-2 input {
+    position: absolute;
+    z-index: 999;
+}
+
+.cc-selector-2 input:active + .drinkcard-cc,
+.cc-selector input:active + .drinkcard-cc {
+    opacity: 0.9;
+}
+.cc-selector-2 input:checked + .drinkcard-cc,
+.cc-selector input:checked + .drinkcard-cc {
+    -webkit-filter: none;
+    -moz-filter: none;
+    filter: none;
+}
+
+.drinkcard-cc {
+    cursor: pointer;
+    background-size: contain;
+    background-repeat: no-repeat;
+    -webkit-transition: all 100ms ease-in;
+    -moz-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+    -webkit-filter: brightness(1.8) grayscale(1) opacity(0.7);
+    -moz-filter: brightness(1.8) grayscale(1) opacity(0.7);
+    filter: brightness(1.8) grayscale(1) opacity(0.7);
+}
+.drinkcard-cc:hover {
+    -webkit-filter: brightness(1.2) grayscale(0.5) opacity(0.9);
+    -moz-filter: brightness(1.2) grayscale(0.5) opacity(0.9);
+    filter: brightness(1.2) grayscale(0.5) opacity(0.9);
+}
+
+
+/*
+ * The Card
+ *
+ * ==================== */
+.cc-green-mobile {
+    box-sizing: border-box;
+    font-family: "Consolas", monospace;
+    font-size: 14px;
+    background-color: #327f37;
+    border-radius: 10px;
+    display: block;
+    height: 100px;
+    letter-spacing: 0.1rem;
+    position: relative;
+    text-align: left;
+    text-transform: uppercase;
+    width: 170px;
+}
+
+.cc-dark-mobile {
+    box-sizing: border-box;
+    font-family: "Consolas", monospace;
+    font-size: 14px;
+    background-color: #33353c;
+    border-radius: 10px;
+    display: block;
+    height: 100px;
+    letter-spacing: 0.1rem;
+    position: relative;
+    text-align: left;
+    text-transform: uppercase;
+    width: 170px;
+}
+
+.chip-mobile {
+    background: #efb77f;
+    border-radius: 5px;
+    display: block;
+    height: 15px;
+    left: 30px;
+    position: absolute;
+    top: 18px;
+    width: 19px;
+}
+
+.cc-number-mobile {
+    background: linear-gradient(#eee, #999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    bottom: 40px;
+    font-size: 9px;
+    left: 24px;
+    position: absolute;
+}
+
+.cc-date-mobile {
+    background: linear-gradient(#eee, #999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    bottom: 40px;
+    left: 30px;
+    position: absolute;
+}
+
+.cc-name-mobile {
+    background: linear-gradient(#eee, #999);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    bottom: 15px;
+    left: 24px;
+    position: absolute;
+    font-size: 10px;
+}
+
+.logo-visa-mobile {
+    position: relative;
+    margin-top: -3px;
+    left: 120px;
+}
+
+.logo-mastercard-mobile {
+    position: relative;
+    margin-top: -3px;
+    left: 120px;
+}
+
+
+
+@media only screen and (min-width: 961px) {
+    .margin-control {
+        margin-right: auto !important;
+        margin-left: auto !important;
+    }
+}
