--- a/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
+++ b/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
@@ -110,7 +110,7 @@
                             scope="col"
                             class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0 text-center line-height-1-2"
                         >
-                            {{ "Donated amount" |t  }}
+                            {{ "Referral benefits" |t  }}
                         </th>
                     </tr>
                     </thead>
