--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -98,7 +98,7 @@
                                         >
                                        <span class="mr-3">
                                                 <span
-                                                    class="text-grey">{{ 'Next payment date' | t }}: </span>{{ regular_donation.next_payment_date.value | date("m/d/Y")}}
+                                                    class="text-grey">{{ 'Next payment date' | t }}: </span>{{ regular_donation.next_payment_date.value | date("m/d/Y") }}
                                             </span>
                                         </div>
                                     </div>
@@ -178,39 +178,19 @@
                     {{ regular_donation_form.form_build_id }}
                     {{ regular_donation_form.form_token }}
                     {{ regular_donation_form.form_id }}
-                    <p
-                        class="d-flex flex-wrap flex-sm-nowrap align-items-center justify-content-center justify-content-md-between my-2 my-sm-4"
-                    >
-                        <img
-                            src="/themes/custom/girchi/dist/css/images/tbc-logo-ka-ge.svg"
-                            alt=""
-                            class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                            height="17"
-                        />
-                        <img
-                            src="/themes/custom/girchi/dist/css/images/bog-geo-horizontal.png"
-                            alt=""
-                            class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                            height="17"
-                        />
-                        <img
-                            src="/themes/custom/girchi/dist/css/images/liberty-geo.svg"
-                            alt=""
-                            class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                            height="12"
-                        />
-                        <img
-                            src="/themes/custom/girchi/dist/css/images/visa.png"
-                            alt=""
-                            class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                            height="12"
-                        />
-                        <img
-                            src="/themes/custom/girchi/dist/css/images/mc.svg"
-                            alt=""
-                            class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                            height="17"
-                        />
+                    {{ regular_donation_form.card_id }}
+                    <p class="d-flex flex-wrap flex-sm-nowrap align-items-center justify-content-center justify-content-md-between my-2 my-sm-4">
+                        <img src="/{{ directory }}/dist/css/images/tbc-logo-ka-ge.svg" alt=""
+                             class="mt-2 mt-sm-0 mr-3 mr-sm-0" height="17">
+                        <img src="/{{ directory }}/dist/css/images/bog-geo-horizontal.png" alt=""
+                             class="mt-2 mt-sm-0 mr-3 mr-sm-0" height="17">
+                        <img src="/{{ directory }}/dist/css/images/liberty-geo.svg" alt=""
+                             class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                             height="12">
+                        <img src="/{{ directory }}/dist/css/images/visa.png" alt="" class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                             height="12">
+                        <img src="/{{ directory }}/dist/css/images/mc.svg" alt="" class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                             height="17">
                     </p>
                     <hr class="border-dashed border-secondary"/>
                     <div class="d-flex flex-wrap flex-sm-nowrap">
@@ -265,7 +245,168 @@
                         </div>
                     </div>
                     {{ regular_donation_form.currency }}
-                    {{ regular_donation_form.submit }}
+
+                    {# Start of modal#}
+                    <div
+                        class="modal fade"
+                        id="chooseCard"
+                        tabindex="-1"
+                        role="dialog"
+                        aria-labelledby="chooseCardTitle"
+                        aria-hidden="true"
+                    >
+                        <div
+                            class="modal-dialog modal-dialog-centered"
+                            role="document"
+                        >
+                            <div class="modal-content overflow-hidden">
+                                <div
+                                    class="modal-header align-items-center px-3 px-md-4"
+                                >
+                                    <h5
+                                        class="modal-title font-size-3 text-uppercase font-weight-bold"
+                                        id="addPaymentTitle"
+                                    >
+                                        ავტომატური დაფინანსება
+                                    </h5>
+                                    <button
+                                        type="button"
+                                        class="close ml-2"
+                                        data-dismiss="modal"
+                                        aria-label="Close"
+                                    >
+                                        <i
+                                            aria-hidden="true"
+                                            class="icon-close font-size-3 text-dark-silver"
+                                        ></i>
+                                    </button>
+                                </div>
+                                <div
+                                    class="modal-body pt-0  pl-3 pr-3 pb-3 pl-md-5 pr-md-5 pb-md-5"
+                                >
+                                    <form action="">
+                                        <div class="container py-2">
+                                            <h6
+                                                class="text-uppercase m-0"
+                                            >
+                                                მიზანი/პოლიტიკოსი: <b class="text-success"
+                                                                      id="main-holder">ზურაბ
+                                                    ჯაფარიძეს</b>
+
+                                            </h6>
+                                            <h6
+                                                class="text-uppercase m-0"
+                                            >
+                                                თანხა: <b class="text-success"
+                                                          id="amount-holder">15 ლარი</b>
+
+                                            </h6>
+                                            <h6
+                                                class="text-uppercase m-0"
+                                            >
+                                                ყოველთვე ჩაგერიცხებათ: <b
+                                                    class="text-success" id="ged-holder"><i
+                                                        class="icon-ged line-height-1-1"></i>15</b>
+
+                                            </h6>
+                                            <h6
+                                                class="text-uppercase m-0"
+                                            >
+                                                პერიოდულობა: <b class="text-success"
+                                                                id="date-holder">1 თვე</b>
+
+                                            </h6>
+                                        </div>
+                                        <hr class="border-dashed border-secondary"/>
+                                        <h6 class="text-uppercase pt-2 text-warning font-weight-bold my-3 text-center">
+                                            აირჩიე ბარათი ავტომატური დაფინანსებისთვის</h6>
+                                        <div class="cc-selector row">
+                                            <div
+                                                class="align-self-center margin-control"
+                                            >
+
+                                                {% for card in cards %}
+                                                    {% if card.Type() == 'VISA' %}
+                                                        <input
+                                                            id="{{ card.id() }}"
+                                                            type="radio"
+                                                            name="credit-card"
+                                                            value="{{ card.id() }}"
+                                                        />
+                                                        <label
+                                                            class="drinkcard-cc"
+                                                            for="{{ card.id() }}"
+                                                        >
+                                                            <div
+                                                                class="cc-dark-mobile col-md-3 m-2"
+                                                            >
+                                                                                                <span
+                                                                                                    class="chip-mobile"></span>
+                                                                <img
+                                                                    src="/{{ directory }}/images/visa2.svg"
+                                                                    class="logo-visa-mobile"
+                                                                    height="35px"
+                                                                    width="35px"
+                                                                    alt=""
+                                                                />
+                                                                <span
+                                                                    class="cc-number-mobile"
+                                                                >**** **** **** {{ card.Digits() }}</span
+                                                                >
+                                                                <span class="cc-name-mobile"
+                                                                >{{ card.Expiry(TRUE) }}</span
+                                                                >
+                                                            </div>
+                                                        </label>
+                                                    {% elseif card.Type() == 'MC' %}
+                                                        <input
+                                                            id="{{ card.id() }}"
+                                                            type="radio"
+                                                            name="credit-card"
+                                                            value="{{ card.id() }}"
+                                                        />
+                                                        <label class="drinkcard-cc"
+                                                               for="{{ card.id() }}">
+                                                            <div
+                                                                class="cc-green-mobile col-md-3 m-2"
+                                                            >
+                                                                                                <span
+                                                                                                    class="chip-mobile"></span>
+                                                                <img
+                                                                    src="/{{ directory }}/images/mc_symbol.svg"
+                                                                    height="35px"
+                                                                    width="35px"
+                                                                    class="logo-mastercard-mobile"
+                                                                    alt=""
+                                                                />
+                                                                <span
+                                                                    class="cc-number-mobile"
+                                                                >**** **** **** {{ card.Digits() }}</span
+                                                                >
+                                                                <span class="cc-name-mobile"
+                                                                >{{ card.Expiry(TRUE) }}</span
+                                                                >
+                                                            </div>
+                                                        </label>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                        {{ regular_donation_form.submit }}
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {# End of modal#}
+                    <button
+                        id="cardSelector"
+                        data-toggle="modal"
+                        data-target="#chooseCard"
+                        class="btn btn-lg btn-block btn-warning text-uppercase mt-4"
+                    >
+                        {{ 'Donate'|t }}
+                    </button>
                 </form>
             </div>
         </div>
@@ -303,39 +444,19 @@
                 </div>
                 <div class="modal-body pt-0  pl-3 pr-3 pb-3 pl-md-5 pr-md-5 pb-md-5">
                     <form method="post" action="/donate/edit_donation">
-                        <p
-                            class="d-flex flex-wrap flex-sm-nowrap align-items-center justify-content-center justify-content-md-between my-2 my-sm-4"
-                        >
-                            <img
-                                src="/themes/custom/girchi/dist/css/images/tbc-logo-ka-ge.svg"
-                                alt=""
-                                class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                                height="17"
-                            />
-                            <img
-                                src="/themes/custom/girchi/dist/css/images/bog-geo-horizontal.png"
-                                alt=""
-                                class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                                height="17"
-                            />
-                            <img
-                                src="/themes/custom/girchi/dist/css/images/liberty-geo.svg"
-                                alt=""
-                                class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                                height="12"
-                            />
-                            <img
-                                src="/themes/custom/girchi/dist/css/images/visa.png"
-                                alt=""
-                                class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                                height="12"
-                            />
-                            <img
-                                src="/themes/custom/girchi/dist/css/images/mc.svg"
-                                alt=""
-                                class="mt-2 mt-sm-0 mr-3 mr-sm-0"
-                                height="17"
-                            />
+                        <p class="d-flex flex-wrap flex-sm-nowrap align-items-center justify-content-center justify-content-md-between my-2 my-sm-4">
+                            <img src="/{{ directory }}/dist/css/images/tbc-logo-ka-ge.svg" alt=""
+                                 class="mt-2 mt-sm-0 mr-3 mr-sm-0" height="17">
+                            <img src="/{{ directory }}/dist/css/images/bog-geo-horizontal.png" alt=""
+                                 class="mt-2 mt-sm-0 mr-3 mr-sm-0" height="17">
+                            <img src="/{{ directory }}/dist/css/images/liberty-geo.svg" alt=""
+                                 class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                                 height="12">
+                            <img src="/{{ directory }}/dist/css/images/visa.png" alt=""
+                                 class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                                 height="12">
+                            <img src="/{{ directory }}/dist/css/images/mc.svg" alt="" class="mt-2 mt-sm-0 mr-3 mr-sm-0"
+                                 height="17">
                         </p>
                         <hr class="border-dashed border-secondary"/>
                         <h5 class="font-size-3 font-weight-bold text-warning">
@@ -441,3 +562,4 @@
     </div>
 {% endfor %}
 {{ attach_library('girchi/donation') }}
+{{ attach_library('girchi_banking/girchi_banking') }}
