--- a/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
+++ b/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
@@ -142,7 +142,7 @@
                                 </div>
                             </td>
                             <td class="text-right text-md-center align-middle">
-                                {% if user.referral_count < 4  %}
+                                {% if user.referral_count <= 4  %}
                                     <ul
                                         class="list-unstyled m-0 align-items-center d-none d-md-flex"
                                     >
