--- a/web/modules/custom/girchi_utils/templates/lead-partners.html.twig
+++ b/web/modules/custom/girchi_utils/templates/lead-partners.html.twig
@@ -12,7 +12,7 @@
                     role="tab"
                     aria-controls="daily"
                     aria-selected="true"
-                >{{ "Last month Top partners" |t }}</a
+                >{{ "Top partners" |t }}</a
                 >
             </li>
             <li class="nav-item col-6">
@@ -24,7 +24,7 @@
                     role="tab"
                     aria-controls="weekly"
                     aria-selected="false"
-                >{{ "Last month Top referrals" |t}}</a
+                >{{ "Top referrals" |t}}</a
                 >
             </li>
         </ul>
