--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -71,7 +71,7 @@
                         </button>
                         <div class="border bg-dark-white border-dashed rounded px-4 pt-4  mb-4 mt-4">
                             <h6 class="text-uppercase text-success font-weight-bold">
-                                {{ 'Enter your referral'|t }}
+                                {{ 'Enter your referral person'|t }}
                             </h6>
                             <p class="font-size-1 text-grey my-3">
                                 {{ 'You can also use Referral to refer to the person who informed you about us and you decided to register.'|t }}
