--- a/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
+++ b/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
@@ -69,7 +69,7 @@
                     class="modal-title font-size-3 text-uppercase font-weight-bold"
                     id="supportersTitle"
                 >
-                    {{ 'Last month Top referrals' | t }}
+                    {{ 'Top referrals' | t }}
                 </h5>
                 <button
                     type="button"
